# runtrail

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.sh  release-please-config.json
.github/workflows/: build-binaries.yml  ci.yml  release-please.yml
docs/: event-conventions.md  github-actions.md  mvp-spec.md  schema-v1.md
docs/plans/: 01-project-foundation-and-event-schema.md  02-inspect-summarise-diff-validate.md  03-docs-ci-testing-performance.md
docs/research/: 01-event-log-standards-and-agent-observability.md  02-deterministic-architecture-serialization-and-cli-prior-art.md  03-ci-failure-evidence-and-repair-workflows.md
examples/: agent-session.jsonl  browser-qa.jsonl  ci-failure.jsonl  command-failure.jsonl  github-actions-repair.yml  repair-handoff.jsonl
scripts/: perf-smoke.sh
src/: ci_capture.rs  cli.rs  command_run.rs  diff.rs  event.rs  git.rs  log_io.rs  main.rs  redaction.rs  repair.rs  replay.rs  summary.rs
tests/: cli.rs
