[package]
name = "compact-event-log"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A tiny JSONL-first event log for agent, browser QA, repo, and CI workflows"
repository = "https://github.com/forjd-hermes-bot/compact-event-log"

[[bin]]
name = "cel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
ulid = { version = "1.2", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
